# hydrobot

./: # Code Citations & Attributions.md  # Code Citations.md  # Python.gitignore_global  .env  .env.sample  Dockerfile  README.md  analyzer.py  app.py  arbitrage_bot.py  backtest.py  binanceus_BTCUSD.csv  bitfinex_BTCUSD.csv  bot-deployment.yaml  coinbase_BTCUSD.csv  config.json  config.yaml  configmap.yaml  cryptonews_client.py  csv_clean  data.py  data_processor.py  db_utils.py  deployment.yaml  exchange_client.py  feature_engineer.py  grafana-dashboards-configmap.yaml  grafana-service.yaml  inference.py  logger_setup.py  main.py  metrics.py  network-policy.yaml  prediction_model.py  prometheus-service.yaml  pyproject.toml  redis-statefulset.yaml  regime_model.py  requirements.txt  runner.py  (+8 more)
config/: config.yaml  settings.py
dashboard/: callbacks.py
data/: client_binance.py  client_cryptonews.py  client_reddit.py  client_twitter.py  data_loader.py  market_data_stream.py  technicals.py
database/: db_utils.py
features/: feature_generator.py
models/: predictor.py  trainer.py
scripts/: run_backfill.py  run_backtest.py  run_data_collection.py
strategies/: base_strategy.py  impl_arbitrage.py  impl_scalping.py  strategy_manager.py
trading/: order_executor.py  position_manager.py  risk_controller.py
utils/: backtest_metrics.py  logger_setup.py  metrics.py
